--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -13,6 +13,12 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Create tag
+      id: create_tag
+      run: |
+        tag=release-$(make version)-$(date +%Y%m%d-%H%M%S)
+        echo "::set-output name=tag::$tag"
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
