--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -82,7 +82,7 @@ jobs:
       run: make deb_binary
 
     - name: Display artifacts
-      run: ls -R output/xgrup-password_*_all.deb
+      run: ls -R output/xgrub-password_*_all.deb
       working-directory: .
 
     - name: Upload
