--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -74,16 +74,16 @@ jobs:
     - name: Install extra packages
       run: |
         sudo apt-get update
-        sudo apt-get install git git-buildpackage lintian debhelper
+        sudo apt-get install git git2cl lintian debhelper
 
     - name: Show info
       run: make info
 
     - name: Create deb package
-      run: make deb_binary
+      run: make deb
 
     - name: Display artifacts
-      run: ls -R output/xgrub-password_*_all.deb
+      run: ls -R xgrub-password_*_all.deb
       working-directory: .
 
     - name: Upload
