--- a/.github/workflows/build_deb.yml
+++ b/.github/workflows/build_deb.yml
@@ -1,10 +1,10 @@
 name: Build debian package
 on:
-  workflow_dispatch:
-  #push:
-  #  branches: [ master ]
-  #pull_request:
-  #  branches: [ master ]
+  #workflow_dispatch:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   release:
